Partial_14Dec2021/force-app/main/default/objects/Branding__c/Branding__c.object-meta.xml
<CustomObject>
    <label>Branding</label>
    <nameField>
        <label>Branding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>