Partial_14Dec2021/force-app/main/default/objects/Branding__c/fields/Branding_Details__c.field-meta.xml
<CustomField>
    <fullName>Branding_Details__c</fullName>
    <label>Branding Details</label>
    <type>TextArea</type>
</CustomField>