Partial_14Dec2021/force-app/main/default/objects/Branding__c/fields/Contactperson__c.field-meta.xml
<CustomField>
    <fullName>Contactperson__c</fullName>
    <formula>Dealer_Distributor_Name__r.Primary_Contact_Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>