Partial_14Dec2021/force-app/main/default/objects/Branding__c/fields/Dealer_Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer/Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Branding_Tab</relationshipName>
    <type>Lookup</type>
</CustomField>