Partial_14Dec2021/force-app/main/default/objects/Branding__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&apos;branding@ashirvad.com&apos;</defaultValue>
    <label>Email</label>
    <type>Email</type>
</CustomField>