Partial_14Dec2021/force-app/main/default/objects/Branding__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Shop</fullName>
            </value>
            <value>
                <fullName>Outshop</fullName>
            </value>
            <value>
                <fullName>Vehicle Branding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>