Partial_14Dec2021/force-app/main/default/objects/Branding__c/fields/Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Type__c</fullName>
    <label>Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Direct Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>