Partial_14Dec2021/force-app/main/default/objects/Branding__c/fields/Send_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Send_Requisition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Requisition</label>
    <type>Checkbox</type>
</CustomField>