Partial_14Dec2021/force-app/main/default/objects/Branding__c/fields/Submedia__c.field-meta.xml
<CustomField>
    <fullName>Submedia__c</fullName>
    <label>Submedia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Media__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Oneway vision / Glass branding</fullName>
            </value>
            <value>
                <fullName>Sunboard</fullName>
            </value>
            <value>
                <fullName>Glow Sign Board</fullName>
            </value>
            <value>
                <fullName>Flex Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>